--- a/Mobile.Droid/packages.config
+++ b/Mobile.Droid/packages.config
@@ -3,8 +3,11 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid51" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid51" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="monoandroid51" />
+  <package id="Rg.Plugins.Popup" version="0.0.17" targetFramework="MonoAndroid60" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="MonoAndroid60" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="MonoAndroid60" />
-  <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="monoandroid51" />
-  <package id="Xamarin.Forms" version="1.4.4.6443" targetFramework="monoandroid51" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.4.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Forms" version="2.3.0.107" targetFramework="MonoAndroid60" />
 </packages>
