--- a/Mobile.iOS/Info.plist
+++ b/Mobile.iOS/Info.plist
@@ -58,6 +58,6 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We are using your location</string>
 	<key>CFBundleName</key>
-	<string>SG Capital - Projeção</string>
+	<string>SG Capital</string>
 </dict>
 </plist>
